	modules/authsql.c modules/authldap.c modules/sortsieve.c quota.c
	debug.h acl.c imapcommands.c dsn.c pipe.c dm_base64.c dbmail-message.c
	check_dbmail_db.c sievecmd.c dbmail-imapsession.c main.c timsieve.c
	memblock.c misc.c:
	Changed all instances of dm_free, dm_malloc, dm_strdup to g_free,
	g_new0 or g_malloc, g_strdup, respectively.

2007-04-07  Aaron Stone  <aaron@serendipity.cx>

	* pool.h, pool.c, lmtp.c, pop3.c, timsieve.c, imapcommands.c,
	serverchild.c:
	Further work on the scoreboard status output, and added currently
	logged in user (pop3, imap, timsieve) or mail sender (lmtp)
	* main.c, serverparent.c, dbmail-user.c:
	Added definitions for yes_to_all, no_to_all, etc.

2007-04-06  Paul J Stevens <paul@nfg.nl>
	
	* README.usermap, UPGRADING:
	documentation update

2007-04-06  Aaron Stone  <aaron@serendipity.cx>

	* dbmail-user.c, user.c:
	Moved definitions of the verbosity variables from dbmail-user.c to
	user.c to avoid multiple definitions
	* pool.h, pool.c, serverchild.c:
	Added client entry to the shared memory status, and functions to pass
	the ip/resolved name of the current client to the pool manager

2007-04-05  Paul J Stevens <paul@nfg.nl>

	* Makefile.in, configure, man/Makefile.in, modules/Makefile.in:
	regenerate autoconf files

2007-04-03  Aaron Stone  <aaron@serendipity.cx>

	* dbmailtypes.h, db.c:
	Moved definition of _db_params from the header to the C file (closes
	bug #453)

2007-04-02  Aaron Stone  <aaron@serendipity.cx>

	* configure.in, Makefile.am, modules/Makefile.am:
	Accepted patch to check if -lcrypt is necessary (closes bug #554)

2007-04-05  Paul J Stevens <paul@nfg.nl>

	* db.c:
	make the UIDNEXT value more rfc compliant
	* imapcommands.c:
	during expunge call remove_uid without re-opening mailbox

2007-03-31  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c:
	work around for OE bug

2007-03-29  Paul J Stevens <paul@nfg.nl>

	* ChangeLog, pop3.c, tags:
	undo accidental changes