@@ -388,7 +388,7 @@ static int _set_content_from_stream(struct DbmailMessage *self, GMimeStream *str
 				}
 
 				if (putslen < getslen && getslen > putslen+1) {
-					TRACE(TRACE_ERROR, "Short write [%d < %d], is your /tmp filesystem full?", 
+					TRACE(TRACE_ERROR, "Short write [%zd < %zd], is your /tmp filesystem full?", 
 						putslen, getslen);
 					res = 1;
 					break;
